<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight = "1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonLeft"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="75dp"
                    android:onClick="buttonPreviousImage"
                    android:text="@string/previous"
                    app:layout_constraintEnd_toStartOf="@id/imageViewThumbnail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageViewThumbnail"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/avatar_user"
                    app:layout_constraintStart_toEndOf="@id/buttonLeft"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/buttonRight"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />

                <Button
                    android:id="@+id/buttonRight"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="75dp"
                    android:text="@string/next"
                    android:onClick="buttonNextImage"
                    app:layout_constraintStart_toEndOf="@id/imageViewThumbnail"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

                <TextView
                    android:id="@+id/textViewContactNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/num_ro_de_contact"
                    android:gravity="center_vertical"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <EditText
                    android:id="@+id/editTextContactNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/textViewFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prenom"
                    android:gravity="center_vertical"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/textViewLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nom"
                    android:gravity="center_vertical"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/textViewPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/num_ro_de_t_l_phone"
                    android:gravity="center_vertical"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <EditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/adresse"
                    android:gravity="center_vertical"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/textViewPostalCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/code_postal"
                    android:gravity="center_vertical"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <EditText
                    android:id="@+id/editTextPostalCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:gravity="center_vertical"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/textViewJob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/metier"
                    android:gravity="center_vertical"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <EditText
                    android:id="@+id/editTextJob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <TextView
                    android:id="@+id/textViewSituation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/situation"
                    android:gravity="center_vertical"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>

                <EditText
                    android:id="@+id/editTextSituation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"/>
            </GridLayout>

        <!-- Boutons pour la navigation entre les contacts -->
        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/first"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:onClick="buttonFirstClick" />

                <Button
                    android:id="@+id/buttonPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/previous_contact"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:onClick="buttonPreviousClick" />

                <Button
                    android:id="@+id/buttonNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next_contact"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:onClick="buttonNextClick" />

                <Button
                    android:id="@+id/buttonLast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:onClick="buttonLastClick"
                    android:singleLine="true"
                    android:text="@string/last" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextContactNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autofillHints="1"
                        android:hint="@string/ndc"
                        android:inputType="number" />

                    <!-- Boutons pour créer et supprimer une fiche -->
                    <Button
                        android:id="@+id/buttonCreate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cr_er_fiche"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:onClick="buttonCreateClick" />

                    <Button
                        android:id="@+id/buttonDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/supprimer"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:onClick="buttonDeleteClick" />

                    <Button
                        android:id="@+id/buttonSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/enregistrer"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:onClick="buttonSaveClick" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
